<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="userViewModel"
            type="be.scoutswondelgem.wafelbak.viewmodels.UserViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            tools:context=".ui.LoginFragment" tools:ignore="ScrollViewSize">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" android:layout_marginEnd="8dp" android:id="@+id/loading"
                android:visibility="@{safeUnbox(userViewModel.loadingVisibility)}">
                <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/default_horizontal_margin"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/default_horizontal_margin"
                android:id="@+id/cardView" app:cardCornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@+id/title_sign_in">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:layout_marginTop="@dimen/default_vertical_margin"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="@dimen/default_horizontal_margin"
                        android:layout_marginEnd="@dimen/default_horizontal_margin"
                        android:id="@+id/inputlayout_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="@{safeUnbox(userViewModel.contentEnabled)}"
                            android:inputType="textEmailAddress"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:id="@+id/inputlayout_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/default_horizontal_margin"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="@dimen/default_horizontal_margin"
                        app:layout_constraintTop_toBottomOf="@+id/inputlayout_email"
                        android:layout_marginTop="@dimen/default_vertical_margin"
                        android:layout_marginBottom="@dimen/default_vertical_margin"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="@{safeUnbox(userViewModel.contentEnabled)}"
                            android:inputType="textPassword"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/default_horizontal_margin"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/default_horizontal_margin"
                android:layout_marginBottom="@dimen/default_vertical_margin"
                android:enabled="false"
                android:text="@string/action_sign_in"
                android:backgroundTint="@color/colorSave"
                app:cornerRadius="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/title_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/action_sign_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:scaleX="2"
                android:scaleY="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_foreground"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBackground"
                android:textColor="@color/colorText"
                android:text="@string/noAccountYet"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="147dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>