...
        <menu>
            <item
                android:id="@+id/nav_edit_profile"
                android:icon="@drawable/ic_account_circle_orange_24dp"
                android:title="@string/nav_edit_profile"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_orange_24dp"
                android:title="@string/nav_logout"/>
        </menu>
    </item>
</menu>
