...
                android:text="@string/addOrder"
                android:textColor="@color/colorPrimaryDark"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_marginEnd="@dimen/default_horizontal_margin"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_addOrder" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_addOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
...
